--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -4,8 +4,8 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Xueyi Wang # Website name
-baseURL: 'https://example.com/' # Website URL
-
+#baseURL: 'https://example.com/' # Website URL
+baseURL: 'rug.xueyi_wang.nl' # Website URL
 ############################
 ## LANGUAGE
 ############################
