--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -3,7 +3,7 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Xueyi Wang (王学艺)# Website name
+title: Xueyi Wang # Website name
 #baseURL: 'https://example.com/' # Website URL
 baseURL: 'rug.xueyi_wang.nl' # Website URL
 ############################
